# COMP371_Raytracer

./: .gitignore  CMakeLists.txt  README.md
source/: main.cpp  raytracer.hpp
tests/: test_eigen.cpp  test_json.cpp  test_ppm.cpp  tests.hpp
